# Sports-Pitch-Classifier

./: .gitignore  LICENSE  Makefile  README.md  docker-compose.yml
api/: Dockerfile  README.md  app.py  lambda_function.py  pyproject.toml
backend/: README.md  config.py  dataset.py  evaluate.py  evaluation_results.txt  predict.py  pyproject.toml  results.txt  sagemaker_train.py  train.py
backend/evaluation_results/: pitch_classifier_v1_evaluation.txt
backend/training_logs/: pitch_classifier_v1.txt
frontend/: Dockerfile  README.md  nginx.conf  package.json
frontend/public/: index.html
frontend/src/: App.css  App.js
scripts/: setup_local_minio.sh  setup_localstack.sh
