[project]
name = "backend"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "boto3>=1.37.13",
    "datasets>=3.4.1",
    "matplotlib>=3.10.1",
    "pillow>=11.1.0",
    "scikit-learn>=1.6.1",
    "seaborn>=0.13.2",
    "torch>=2.6.0",
    "torchvision>=0.21.0",
]

[dependency-groups]
dev = [
    "ruff>=0.11.0",
]
